# advent-of-code

./: .gitignore  README.md
2021/01/: Main.scala  Main2.scala  main.c  main.cbl  main1.c  main1.cbl  main2.c  main2.cbl
2021/01/clojure/: main1-alt.clj  main1.clj  main2.clj
2021/01/cobol/: MAIN1.cbl  MAIN2.cbl
2021/01/scala/: Main1.scala
2021/02/c/: main1.c  main2.c
2021/02/scala/: Main1.scala
2021/03/c/: main1.c  main2.c
2021/04/c/: main1.c
2022/01/: main.c
2022/02/: Makefile  a.c  b.c
2022/03/: a.c  b.c
2022/04/: a.c  b.c
2022/05/: a.c  b.c
2022/06/: a.c  b.c
2022/07/: Makefile  ab.c
2022/08/: Makefile  a.c
2023/01/: main.c  main.ml
2023/02/: main.c
2023/03/: main.c
2023/04/: a.c  b.c
2023/05/: main.c
2023/06/: main.c
2023/07/: main.c
2023/08/: a.c  b.py  main.c
2023/09/: main.c
2023/10/: a.c  b.c
2024/01/: main.ml
2024/02/: main.ml
2024/03/: main.ml
2024/04/ocaml_solution/lib/: solution.ml  utils.ml
2024/05/ocaml_solution/: .editorconfig  .gitignore  readme.md
2024/05/ocaml_solution/lib/: dune  solution.ml  utils.ml
2024/06/ocaml_solution/: dune-project
2024/06/ocaml_solution/lib/: matrix.ml  solution.ml  utils.ml
2025/01/: main.py
2025/02/: main.py
2025/03/: main.py
2025/04/: main.py
2025/05/: main.cpp  main.py
2025/06/: main.py
